crates/toml/tests/snapshots/invalid/float/trailing-dot-min.stderr
TOML parse error at line 1, column 23
  |
1 | trailing-dot-min = -1.
  |                       ^
invalid fraction, expected digits
